--- a/Homepage.html
+++ b/Homepage.html
@@ -264,7 +264,6 @@ header h1 {
   <!-- Upload Section End -->
 
  <!-- Recent Activity Start -->
-<div class="container">
     <div class="container-fluid">
         <h2 class="mt-4 ">You Recently Viewed</h2>
         <br>
@@ -321,12 +320,11 @@ header h1 {
             </div>
         </div>
     </div>
-</div>
 
  <!-- Recent Activity End -->
 
 <!-- New Uploads Start-->
-<div class="container">
+<div class="container-fluid">
 <h2 class="mt-4">New Uploads</h2>
 <br>
 <div class="row row-cols-1 row-cols-md-4 g-4">
