--- a/Homepage.html
+++ b/Homepage.html
@@ -106,6 +106,7 @@ header h1 {
   font-size: 16px;
 }
 
+
 /* Styles for larger screens */
 @media (min-width: 768px) {
   .card {
@@ -120,6 +121,7 @@ header h1 {
     font-size: 18px;
   }
 }
+
 
 .btn {
   display: inline-block;
@@ -143,6 +145,7 @@ header h1 {
 .back-to-top:hover {
       background-color: #64eda6;
 }
+
 
 /* Footer Styles */
 .footer {
@@ -251,6 +254,7 @@ header h1 {
   </div>
 </nav>
 
+
  <!-- Navbar End -->
  
   <!-- Upload Section Start -->
@@ -261,7 +265,9 @@ header h1 {
   </div>
 </div>
 
+
   <!-- Upload Section End -->
+
 
  <!-- Recent Activity Start -->
     <div class="container-fluid">
@@ -384,8 +390,7 @@ header h1 {
 <!-- New Uploads End-->
 <br>
 <!-- New & Updates Start-->
-<!-- New & Updates Start-->
-<div class="container">
+<div class="container-fluid">
     <h2 class="mt-4">New & Updates</h2>
     <br>
     <div class="card w-75 mb-3">
@@ -442,7 +447,7 @@ header h1 {
 width="30" height="30"
 viewBox="0,0,256,256"
 style="fill:#000000;">
-<g fill="#10562f" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M42,3h-34c-2.8,0 -5,2.2 -5,5v34c0,2.8 2.2,5 5,5h34c2.8,0 5,-2.2 5,-5v-34c0,-2.8 -2.2,-5 -5,-5zM37,19h-2c-2.1,0 -3,0.5 -3,2v3h5l-1,5h-4v16h-5v-16h-4v-5h4v-3c0,-4 2,-7 6,-7c2.9,0 4,1 4,1z"></path></g></g>
+<g fill="#10562f" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-: normal"><g transform="scale(5.12,5.12)"><path d="M42,3h-34c-2.8,0 -5,2.2 -5,5v34c0,2.8 2.2,5 5,5h34c2.8,0 5,-2.2 5,-5v-34c0,-2.8 -2.2,-5 -5,-5zM37,19h-2c-2.1,0 -3,0.5 -3,2v3h5l-1,5h-4v16h-5v-16h-4v-5h4v-3c0,-4 2,-7 6,-7c2.9,0 4,1 4,1z"></path></g></g>
 </svg></a>
       <a class="" id="idfooter" style="margin-left:15px;" href="#"> <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 width="30" height="30"
