--- a/Homepage.html
+++ b/Homepage.html
@@ -65,16 +65,17 @@
  /* Card Styles */ 
  /* Styles for small screens */ 
  .card { 
-   display: flex; 
-   border-radius: 20px; 
-   overflow: hidden; 
-   width: 18rem; 
-   height: 10rem; 
-   margin: 0 auto; 
-   background-color: white; 
-   box-shadow: 0px 0px 15px rgba(0,0,0,0.2); 
-   transition: all 0.3s ease-out; 
- } 
+  display: flex; 
+  border-radius: 20px; 
+  overflow: hidden; 
+  width: 15rem; 
+  height: 7.5rem; 
+  margin: 0 auto; 
+  background-color: white; 
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.2); 
+  transition: all 0.3s ease-out; 
+}
+ 
   
  .card:hover { 
    box-shadow: 0px 5px 25px rgba(0,0,0,0.3); 
@@ -110,7 +111,7 @@
  /* Styles for larger screens */ 
  @media (min-width: 768px) { 
    .card { 
-     width: 18rem; 
+     width: 20rem; 
    } 
     
    .card-title { 
@@ -120,8 +121,11 @@
    .card-text { 
      font-size: 18px; 
    } 
- } 
-  
+}
+
+.card.w-100.mb-3 {
+  height: 30%;
+} 
   
  .btn { 
    display: inline-block; 
@@ -331,6 +335,7 @@
   
  <!-- New Uploads Start--> 
  <div class="container-fluid"> 
+<div class="position-relative">
  <h2 class="mt-4">New Uploads</h2> 
  <br> 
  <div class="row row-cols-1 row-cols-md-4 g-4"> 
@@ -386,29 +391,36 @@
  <div class="d-flex justify-content-center mt-4"> 
    <button class="btn btn-outline-success">Show more</button> 
  </div> 
- </div> 
- <!-- New Uploads End--> 
+ </div>
+</div>
+ <!-- New Uploads End-->
+
  <br> 
- <!-- New & Updates Start--> 
- <div class="container-fluid"> 
-     <h2 class="mt-4">New & Updates</h2> 
-     <br> 
-     <div class="card w-75 mb-3"> 
-         <div class="row g-0"> 
-             <div class="col-md-4"> 
-                 <h2 class="card-title px-3 py-3">Headline</h2> 
-             </div> 
-             <div class="col-md-8"> 
-                 <div class="card-body"> 
-                     <p class="card-text px-3 py-3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. You can add more text here to increase the size of the card as desired.</p> 
-                 </div> 
-                 <p class="card-text"><small class="text-muted px-3">Last updated 3 mins ago</small></p> 
-             </div> 
-         </div> 
-     </div> 
- </div> 
- <!-- New & Updates End--> 
- <!-- New & Updates End--> 
+
+ <!-- News & Updates Start--> 
+ <div class="container-fluid">
+  <div class="position-relative">
+    <h2 class="mt-4">News & Updates</h2>
+    <br>
+    <div class="card w-100 mb-3">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <h2 class="card-title px-3 py-3">Headline</h2>
+          <p class="ms-3 me-1">abcdrfghijklmnopqrstuvwxyz abcdrfghijklmnopqrstuvwxyz abcdrfghijklmnopqrstuvwxyz abcdrfghijklmnopqrstuvwxyz abcdrfghijklmnopqrstuvwxyz</p>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <p class="card-text px-3 py-3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. You can add more text here to increase the size of the card as desired.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated on ' . $date_added . '</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+ <!-- News & Updates End--> 
  <br> 
  <!-- Footer Start--> 
  <div class="container-fluid"> 
@@ -447,7 +459,7 @@
  width="30" height="30" 
  viewBox="0,0,256,256" 
  style="fill:#000000;"> 
- <g fill="#10562f" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-: normal"><g transform="scale(5.12,5.12)"><path d="M42,3h-34c-2.8,0 -5,2.2 -5,5v34c0,2.8 2.2,5 5,5h34c2.8,0 5,-2.2 5,-5v-34c0,-2.8 -2.2,-5 -5,-5zM37,19h-2c-2.1,0 -3,0.5 -3,2v3h5l-1,5h-4v16h-5v-16h-4v-5h4v-3c0,-4 2,-7 6,-7c2.9,0 4,1 4,1z"></path></g></g> 
+ <g fill="#10562f" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M42,3h-34c-2.8,0 -5,2.2 -5,5v34c0,2.8 2.2,5 5,5h34c2.8,0 5,-2.2 5,-5v-34c0,-2.8 -2.2,-5 -5,-5zM37,19h-2c-2.1,0 -3,0.5 -3,2v3h5l-1,5h-4v16h-5v-16h-4v-5h4v-3c0,-4 2,-7 6,-7c2.9,0 4,1 4,1z"></path></g></g> 
  </svg></a> 
        <a class="" id="idfooter" style="margin-left:15px;" href="#"> <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" 
  width="30" height="30" 
