--- a/Homepage.html
+++ b/Homepage.html
@@ -412,7 +412,7 @@
           <div class="card-body">
             <p class="card-text px-3 py-3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. You can add more text here to increase the size of the card as desired.</p>
           </div>
-          <div class="card-footer">
+          <div class="card-footer2">
             <small class="text-muted">Last updated on ' . $date_added . '</small>
           </div>
         </div>
