--- a/Homepage.html
+++ b/Homepage.html
@@ -288,7 +288,7 @@
   <!-- Navbar Start --> 
  <nav class="navbar navbar-expand-lg navbar-light "> 
    <div class="container-fluid"> 
-     <a class="navbar-brand" href="#">Logo</a> 
+     <a class="navbar-brand" href="#"><img src="সহপাঠ_logo_main (1).png" alt="Logo"></a> 
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> 
        <span class="navbar-toggler-icon"></span> 
      </button> 
