Navbar and introductory section completed

--- a/Homepage.html
+++ b/Homepage.html
@@ -55,7 +55,20 @@
    <!-- Upload Section Start --> 
    <div class="container-fluid home-image-cont"> 
       <div class="left">
-        <button type="submit" class="btn btn-outline-success position-absolute start-50 translate-middle-y btn-lg bottom-0">Upload</button> 
+        <div class="left-main-cont">
+          <header>
+            <h2>Welcome to</p>
+            <h1>Shohopath!</h1>
+          </header>
+  
+          <main>
+            <p>The ultimate online platform for learners. Explore our vast collection of study materials, upload your own resources, and join a growing community of knowledge seekers. Let's learn smarter, not harder - together! </p>
+          </main>
+
+          <footer>
+            <button type="submit" class="btn upload_btn">Upload a post</button> 
+          </footer>
+        </div>
       </div>
 
       <div class="right">
