--- a/Homepage.html
+++ b/Homepage.html
@@ -407,8 +407,11 @@
         </li>
 
       </ul>
-      <div class="d-flex justify-content-center mt-4">
-        <button class="btn btn-outline-info">Show more</button>
+
+      <div class="show-more">
+        <svg>
+          <use href="icons.svg#icon__arrow-right"></use>
+        </svg>
       </div>
     </main>
   </div>
@@ -417,129 +420,104 @@
   <br>
 
   <!-- News & Updates Start-->
-  <div class="container-fluid">
-    <div class="position-relative">
-      <h2 class="mt-4 ms-3">News & Updates</h2>
-      <br>
-      <div class="card mb-3" id="card2">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <h2 class="card-title px-3 py-3">Headline</h2>
-            <p class="ms-3 me-1 fs-4">We're Gonna Publish This Site Soon</p>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <p class="card-text px-3 py-3">You guys would love to know that we're working hard  and soon we're gonna complete it and publish. So stay connected with us.</p>
-            </div>
-            <div class="card-footer2 d-flex justify-content-end">
-              <small class="text-muted">Last updated on ' . $date_added . '</small>
-            </div>
-          </div>
+  <div class="footer_cont">
+    <header>
+      <svg>
+        <use href="icons.svg#icon__wave-up"></use>
+      </svg>
+    </header>
+
+    <main>
+      <div class="left">
+        <h2>Hello, there!</h2>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis molestias. Fugiat pariatur
+          maxime quis culpa corporis vitae repudiandae aliquam voluptatem veniam, est atque cumque eum delectus
+          sint! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis molestias. Fugiat pariatur
+          maxime quis culpa corporis vitae repudiandae aliquam voluptatem veniam, est atque cumque eum delectus
+          sint!
+        </p>
+      </div>
+
+      <div class="middle">
+        <h4>Quick links</h4>
+
+        <ul>
+          <li>
+            <a href="">Home</a>
+          </li>
+
+          <li>
+            <a href="">Home</a>
+          </li>
+
+          <li>
+            <a href="">Home</a>
+          </li>
+
+          <li>
+            <a href="">Home</a>
+          </li>
+
+          <li>
+            <a href="">Home</a>
+          </li>
+
+          <li>
+            <a href="">Home</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="right">
+        <h2>Contact Us</h2>
+
+        <div class="top">
+          <p>Mail: shohopath.developer@gmail.com</p>
+        </div>
+
+        <div class="middle">
+          <h3>Meet the developers</h3>
+
+          <ul>
+            <li>
+              <img src="img/profile_image.jpg" alt="">
+              <p>Sakib</p>
+            </li>
+            
+            <li>
+              <img src="img/profile_image.jpg" alt="">
+              <p>Sakib</p>
+            </li>
+            
+            <li>
+              <img src="img/profile_image.jpg" alt="">
+              <p>Sakib</p>
+            </li>
+
+            <li>
+              <img src="img/profile_image.jpg" alt="">
+              <p>Sakib</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="bottom">
+          <h3>Stay in touch with us</h3>
+
+          <ul>
+            <li>
+              <svg>
+                <use href="icons.svg#icon__facebook"></use>
+              </svg>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
+    </main>
   </div>
   <!-- News & Updates End-->
-
-  <br>
-  <!-- Footer Start-->
-  <div class="container-fluid" style="background-color: #c6def1;">
-    <footer>
-      <div class="container w-100 p-4">
-        <div class="row">
-          <div class="col-lg-6 col-md-12 mb-4">
-            <h5 class="mb-3 text-dark"><strong>Footer content</strong></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis molestias. Fugiat pariatur
-              maxime quis culpa corporis vitae repudiandae aliquam voluptatem veniam, est atque cumque eum delectus
-              sint!
-            </p>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <h5 class="mb-3 text-dark"><strong>Links</strong></h5>
-            <ul class="list-unstyled mb-0">
-              <li class="mb-1">
-                <a href="#!" style="color: #4f4f4f;">FAQ</a>
-              </li>
-              <li class="mb-1">
-                <a href="#!" style="color: #4f4f4f;">Classes</a>
-              </li>
-              <li class="mb-1">
-                <a href="#!" style="color: #4f4f4f;">Pricing</a>
-              </li>
-              <li>
-                <a href="#!" style="color: #4f4f4f;">Safety</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <h5 class="text mb-4 ml-6 " style="margin-left: 100px;"><strong>Follow us</strong></h5>
-            <!-- Social Media Icons -->
-            <div class="d-flex justify-content-center ">
-              <div class="social-icon">
-                <a class="" id="idfooter" style="margin-left:0px;" href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                    x="0px" y="0px" width="30" height="30" viewBox="0,0,256,256" style="fill:#000000;">
-                    <g fill="#0f5286" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
-                      stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
-                      font-family="none" font-weight="none" font-size="none" text-anchor="none"
-                      style="mix-blend-mode: normal">
-                      <g transform="scale(5.12,5.12)">
-                        <path
-                          d="M42,3h-34c-2.8,0 -5,2.2 -5,5v34c0,2.8 2.2,5 5,5h34c2.8,0 5,-2.2 5,-5v-34c0,-2.8 -2.2,-5 -5,-5zM37,19h-2c-2.1,0 -3,0.5 -3,2v3h5l-1,5h-4v16h-5v-16h-4v-5h4v-3c0,-4 2,-7 6,-7c2.9,0 4,1 4,1z">
-                        </path>
-                      </g>
-                    </g>
-                  </svg></a>
-                <a class="" id="idfooter" style="margin-left:15px;" href="#"> <svg xmlns="http://www.w3.org/2000/svg"
-                    x="0px" y="0px" width="30" height="30" viewBox="0,0,256,256" style="fill:#000000;">
-                    <g fill="#0f5286" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
-                      stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
-                      font-family="none" font-weight="none" font-size="none" text-anchor="none"
-                      style="mix-blend-mode: normal">
-                      <g transform="scale(5.33333,5.33333)">
-                        <path
-                          d="M42,12.429c-1.323,0.586 -2.746,0.977 -4.247,1.162c1.526,-0.906 2.7,-2.351 3.251,-4.058c-1.428,0.837 -3.01,1.452 -4.693,1.776c-1.344,-1.425 -3.261,-2.309 -5.385,-2.309c-4.08,0 -7.387,3.278 -7.387,7.32c0,0.572 0.067,1.129 0.193,1.67c-6.138,-0.308 -11.582,-3.226 -15.224,-7.654c-0.64,1.082 -1,2.349 -1,3.686c0,2.541 1.301,4.778 3.285,6.096c-1.211,-0.037 -2.351,-0.374 -3.349,-0.914c0,0.022 0,0.055 0,0.086c0,3.551 2.547,6.508 5.923,7.181c-0.617,0.169 -1.269,0.263 -1.941,0.263c-0.477,0 -0.942,-0.054 -1.392,-0.135c0.94,2.902 3.667,5.023 6.898,5.086c-2.528,1.96 -5.712,3.134 -9.174,3.134c-0.598,0 -1.183,-0.034 -1.761,-0.104c3.271,2.071 7.155,3.285 11.324,3.285c13.585,0 21.017,-11.156 21.017,-20.834c0,-0.317 -0.01,-0.633 -0.025,-0.945c1.45,-1.024 2.7,-2.316 3.687,-3.792">
-                        </path>
-                      </g>
-                    </g>
-                  </svg></a>
-                <a class="" id="idfooter" style="margin-left:15px;" href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                    x="0px" y="0px" width="30" height="30" viewBox="0,0,256,256" style="fill:#000000;">
-                    <g fill="#0f5286" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
-                      stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
-                      font-family="none" font-weight="none" font-size="none" text-anchor="none"
-                      style="mix-blend-mode: normal">
-                      <g transform="scale(10.66667,10.66667)">
-                        <path
-                          d="M19,3h-14c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2v-14c0,-1.1 -0.9,-2 -2,-2zM9,15.7c0,0.7 -0.6,1.3 -1.3,1.3c-0.7,0 -1.3,-0.6 -1.3,-1.3v-4.5c0.1,-0.6 0.6,-1.2 1.3,-1.2c0.7,0 1.3,0.6 1.3,1.3zM7.7,8.7c-0.8,0 -1.3,-0.5 -1.3,-1.2c0,-0.7 0.5,-1.2 1.4,-1.2c0.8,0 1.3,0.5 1.3,1.2c0,0.7 -0.5,1.2 -1.4,1.2zM18,15.8c0,0.7 -0.5,1.2 -1.2,1.2c-0.7,0 -1.2,-0.5 -1.2,-1.2v-2.6c0,-1.1 -0.7,-1.2 -0.9,-1.2c-0.2,0 -1.1,0 -1.1,1.2v2.6c0,0.7 -0.5,1.2 -1.2,1.2h-0.1c-0.7,0 -1.2,-0.5 -1.2,-1.2v-4.5c0,-0.7 0.6,-1.3 1.3,-1.3c0.7,0 1.3,0.6 1.3,1.3c0,0 0.3,-1.3 2.2,-1.3c1.2,0 2.2,1 2.2,3.2v2.6z">
-                        </path>
-                      </g>
-                    </g>
-                  </svg></a>
-                <a class="" id="idfooter" style="margin-left:15px;" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-                  width="50" height="50"
-                  viewBox="0,0,256,256"
-                  style="fill:#000000;">
-                  <g fill="#0f5286" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M16,3c-7.17,0 -13,5.83 -13,13v18c0,7.17 5.83,13 13,13h18c7.17,0 13,-5.83 13,-13v-18c0,-7.17 -5.83,-13 -13,-13zM37,11c1.1,0 2,0.9 2,2c0,1.1 -0.9,2 -2,2c-1.1,0 -2,-0.9 -2,-2c0,-1.1 0.9,-2 2,-2zM25,14c6.07,0 11,4.93 11,11c0,6.07 -4.93,11 -11,11c-6.07,0 -11,-4.93 -11,-11c0,-6.07 4.93,-11 11,-11zM25,16c-4.96,0 -9,4.04 -9,9c0,4.96 4.04,9 9,9c4.96,0 9,-4.04 9,-9c0,-4.96 -4.04,-9 -9,-9z"></path></g></g>
-                  </svg></a>
-                <a class="" id="idfooter" style="margin-left:15px;" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-                  width="50" height="50"
-                  viewBox="0,0,256,256"
-                  style="fill:#000000;">
-                  <g fill="#0f5286" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M44.89844,14.5c-0.39844,-2.19922 -2.29687,-3.80078 -4.5,-4.30078c-3.29687,-0.69922 -9.39844,-1.19922 -16,-1.19922c-6.59766,0 -12.79687,0.5 -16.09766,1.19922c-2.19922,0.5 -4.10156,2 -4.5,4.30078c-0.40234,2.5 -0.80078,6 -0.80078,10.5c0,4.5 0.39844,8 0.89844,10.5c0.40234,2.19922 2.30078,3.80078 4.5,4.30078c3.5,0.69922 9.5,1.19922 16.10156,1.19922c6.60156,0 12.60156,-0.5 16.10156,-1.19922c2.19922,-0.5 4.09766,-2 4.5,-4.30078c0.39844,-2.5 0.89844,-6.10156 1,-10.5c-0.20312,-4.5 -0.70312,-8 -1.20312,-10.5zM19,32v-14l12.19922,7z"></path></g></g>
-                  </svg></a>
-              </div>
-            </div>
-            <!-- Social Media Icons -->
-          </div>
-        </div>
-      </div>
-
-      <div class="text-center p-3" >
-        © 2023 My Website. All rights reserved.
-      </div>
-    </footer>
-  </div>
 
   <!-- Footer End-->
   <!-- Back to Top -->
