--- a/Homepage.html
+++ b/Homepage.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="test-1.css">
 
 </head>
 
@@ -45,8 +45,8 @@
           <li class="nav-item">
             <a class="nav-link active" href="#">Wishlist</a>
           </li>
-          <li class="nav-item profile">
-            <a class="nav-link active text-success" href="#"><img class="img-fluid rounded-circle"
+          <li class="nav-item-profile">
+            <a class="nav-link " href="#"><img class="img-fluid rounded-circle"
                 src="img/profile_image.jpg" alt="Profile"></a>
           </li>
         </ul>
@@ -121,10 +121,9 @@
               </div>
 
               <div class="right">
-                  <svg>
-                    <use href="icons.svg#icon__love"></use>
-                  </svg>
-
+                  <!-- LOVE ICON -->
+                  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                  <lord-icon src="https://cdn.lordicon.com/pnhskdva.json" trigger="click" colors="primary:#da2573" state="morph" style="width:50px;height:50px"> </lord-icon>
                   <p>68</p>
               </div>
             </div>
@@ -158,10 +157,9 @@
               </div>
 
               <div class="right">
-                  <svg>
-                    <use href="icons.svg#icon__love"></use>
-                  </svg>
-
+                  <!-- LOVE ICON -->
+                  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                  <lord-icon src="https://cdn.lordicon.com/pnhskdva.json" trigger="click" colors="primary:#da2573" state="morph" style="width:50px;height:50px"> </lord-icon>
                   <p>68</p>
               </div>
             </div>
@@ -195,10 +193,9 @@
               </div>
 
               <div class="right">
-                  <svg>
-                    <use href="icons.svg#icon__love"></use>
-                  </svg>
-
+                  <!-- LOVE ICON -->
+                  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                  <lord-icon src="https://cdn.lordicon.com/pnhskdva.json" trigger="click" colors="primary:#da2573" state="morph" style="width:50px;height:50px"> </lord-icon>
                   <p>68</p>
               </div>
             </div>
@@ -232,10 +229,9 @@
               </div>
 
               <div class="right">
-                  <svg>
-                    <use href="icons.svg#icon__love"></use>
-                  </svg>
-
+                  <!-- LOVE ICON -->
+                  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                  <lord-icon src="https://cdn.lordicon.com/pnhskdva.json" trigger="click" colors="primary:#da2573" state="morph" style="width:50px;height:50px"> </lord-icon>
                   <p>68</p>
               </div>
             </div>
@@ -299,10 +295,9 @@
               </div>
 
               <div class="right">
-                  <svg>
-                    <use href="icons.svg#icon__love"></use>
-                  </svg>
-
+                  <!-- LOVE ICON -->
+                  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                  <lord-icon src="https://cdn.lordicon.com/pnhskdva.json" trigger="click" colors="primary:#da2573" state="morph" style="width:50px;height:50px"> </lord-icon>
                   <p>68</p>
               </div>
             </div>
@@ -336,10 +331,9 @@
               </div>
 
               <div class="right">
-                  <svg>
-                    <use href="icons.svg#icon__love"></use>
-                  </svg>
-
+                  <!-- LOVE ICON -->
+                  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                  <lord-icon src="https://cdn.lordicon.com/pnhskdva.json" trigger="click" colors="primary:#da2573" state="morph" style="width:50px;height:50px"> </lord-icon>
                   <p>68</p>
               </div>
             </div>
@@ -373,10 +367,9 @@
               </div>
 
               <div class="right">
-                  <svg>
-                    <use href="icons.svg#icon__love"></use>
-                  </svg>
-
+                  <!-- LOVE ICON -->
+                  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                  <lord-icon src="https://cdn.lordicon.com/pnhskdva.json" trigger="click" colors="primary:#da2573" state="morph" style="width:50px;height:50px"> </lord-icon>
                   <p>68</p>
               </div>
             </div>
@@ -410,10 +403,9 @@
               </div>
 
               <div class="right">
-                  <svg>
-                    <use href="icons.svg#icon__love"></use>
-                  </svg>
-
+                  <!-- LOVE ICON -->
+                  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                  <lord-icon src="https://cdn.lordicon.com/pnhskdva.json" trigger="click" colors="primary:#da2573" state="morph" style="width:50px;height:50px"> </lord-icon>
                   <p>68</p>
               </div>
             </div>
@@ -478,24 +470,19 @@
           </li>
 
           <li>
-            <a href="">Home</a>
+            <a href="">Feed</a>
           </li>
 
           <li>
-            <a href="">Home</a>
+            <a href="">Saved</a>
           </li>
 
           <li>
-            <a href="">Home</a>
+            <a href="">Wishlist</a>
           </li>
 
-          <li>
-            <a href="">Home</a>
-          </li>
+          
 
-          <li>
-            <a href="">Home</a>
-          </li>
         </ul>
       </div>
 
@@ -544,7 +531,7 @@
 
             <li>
               <svg>
-                <use href="icons.svg#icon__facebook"></use>
+                <use href="icons.svg#icon__instagram"></use>
               </svg>
             </li>
 
