--- a/Homepage.html
+++ b/Homepage.html
@@ -46,7 +46,7 @@
             <a class="nav-link active" href="#">Wishlist</a>
           </li>
           <li class="nav-item-profile">
-            <a class="nav-link " href="#"><img class="img-fluid rounded-circle"
+            <a class="nav-link active" href="#"><img class="img-fluid rounded-circle"
                 src="img/profile_image.jpg" alt="Profile"></a>
           </li>
         </ul>
