--- a/login.html
+++ b/login.html
@@ -66,9 +66,10 @@
           </div>
 
           <div class="text text-lg-start mt-4 pt-2">
-            <button type="button" class="btn btn-outline-info"
-              style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
+            <div class="col-md-12 mt-4">
+              <button type="submit" class="btn btn-outline-info btn-lg">Sign Up</button>
+          </div>
+            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="registration.html"
                 class="link-register-btn">Register</a></p>
           </div>
 
