Registration page completed

--- a/Homepage.html
+++ b/Homepage.html
@@ -466,9 +466,9 @@
   <div class="home-image-cont">
     <div class="left">
       <div class="left-main-cont">
-        <header>
+        <header class="welcome-text">
           <h2>Welcome to</p>
-            <h1>Shohopath!</h1>
+          <h1>Shohopath!</h1>
         </header>
 
         <main>
