Login page completed

--- a/registration.html
+++ b/registration.html
@@ -304,7 +304,7 @@
     </div>
   </nav>
   
-  <section class="vh-100">
+  <section class="vh-100 reg__cont">
     <div class="container-fluid h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         
