--- a/login.html
+++ b/login.html
@@ -15,15 +15,301 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="login.css">
 
 </head>
-  </head>
   <body>
-    <section class="vh-100">
-  <div class="container-fluid h-custom">
+
+    <nav class="navbar-expand-lg navbar-light ">
+      <div class="top-nav navbar">
+        <a class="navbar-brand" href="#"><img src="img/সহপাঠ_logo_main_cropped_5.png" alt="Logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+  
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ml-auto">
+            <li>
+              <div class="search_bar">
+                <input class="search-input" type="text" placeholder="Search for a subject or a chapter">
+                <svg class="search-icon" onclick="focusInput()" onmouseenter="focusInput()">
+                  <use href="icons.svg#icon__search"></use>
+                </svg>
+               
+                <script>
+                  const focusInput = () => {
+                    document.querySelector('.search-input').focus()
+                    document.querySelector('.search-icon').focus()
+                  }
+                </script>
+              </div>  
+              
+              <div class="search-result_bar">
+                <ul>
+                  <li class="search-result_item">
+                    <div class="left">
+                      <img src="img/class_cover_1.jpg" alt="">
+                    </div>
+  
+                    <div class="right">
+                      <div class="top">
+                        <h4>Physics 1st Paper<h4>
+                      </div>
+  
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="progress-bar">
+                            <div class="bar"></div>
+                          </div>
+                          <p>40%</p>
+                        </div>
+                      </div>
+  
+                      <div class="more-bottom">
+                        <div class="total_notes">
+                          <svg>
+                            <use href="icons.svg#icon__pages"></use>
+                          </svg>
+  
+                          <p>32</p>
+                        </div>
+  
+                        <div class="total_classes">
+                          <svg>
+                            <use href="icons.svg#icon__class"></use>
+                          </svg>
+  
+                          <p>22</p>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li class="search-result_item">
+                    <div class="left">
+                      <img src="img/class_cover_1.jpg" alt="">
+                    </div>
+  
+                    <div class="right">
+                      <div class="top">
+                        <h4>Physics 1st Paper<h4>
+                      </div>
+  
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="progress-bar">
+                            <div class="bar"></div>
+                          </div>
+                          <p>40%</p>
+                        </div>
+                      </div>
+  
+                      <div class="more-bottom">
+                        <div class="total_notes">
+                          <svg>
+                            <use href="icons.svg#icon__pages"></use>
+                          </svg>
+  
+                          <p>32</p>
+                        </div>
+  
+                        <div class="total_classes">
+                          <svg>
+                            <use href="icons.svg#icon__class"></use>
+                          </svg>
+  
+                          <p>22</p>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li class="search-result_item">
+                    <div class="left">
+                      <img src="img/class_cover_1.jpg" alt="">
+                    </div>
+  
+                    <div class="right">
+                      <div class="top">
+                        <h4>Physics 1st Paper<h4>
+                      </div>
+  
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="progress-bar">
+                            <div class="bar"></div>
+                          </div>
+                          <p>40%</p>
+                        </div>
+                      </div>
+  
+                      <div class="more-bottom">
+                        <div class="total_notes">
+                          <svg>
+                            <use href="icons.svg#icon__pages"></use>
+                          </svg>
+  
+                          <p>32</p>
+                        </div>
+  
+                        <div class="total_classes">
+                          <svg>
+                            <use href="icons.svg#icon__class"></use>
+                          </svg>
+  
+                          <p>22</p>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li class="search-result_item">
+                    <div class="left">
+                      <img src="img/class_cover_1.jpg" alt="">
+                    </div>
+  
+                    <div class="right">
+                      <div class="top">
+                        <h4>Physics 1st Paper<h4>
+                      </div>
+  
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="progress-bar">
+                            <div class="bar"></div>
+                          </div>
+                          <p>40%</p>
+                        </div>
+                      </div>
+  
+                      <div class="more-bottom">
+                        <div class="total_notes">
+                          <svg>
+                            <use href="icons.svg#icon__pages"></use>
+                          </svg>
+  
+                          <p>32</p>
+                        </div>
+  
+                        <div class="total_classes">
+                          <svg>
+                            <use href="icons.svg#icon__class"></use>
+                          </svg>
+  
+                          <p>22</p>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li class="search-result_item">
+                    <div class="left">
+                      <img src="img/class_cover_1.jpg" alt="">
+                    </div>
+  
+                    <div class="right">
+                      <div class="top">
+                        <h4>Physics 1st Paper<h4>
+                      </div>
+  
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="progress-bar">
+                            <div class="bar"></div>
+                          </div>
+                          <p>40%</p>
+                        </div>
+                      </div>
+  
+                      <div class="more-bottom">
+                        <div class="total_notes">
+                          <svg>
+                            <use href="icons.svg#icon__pages"></use>
+                          </svg>
+  
+                          <p>32</p>
+                        </div>
+  
+                        <div class="total_classes">
+                          <svg>
+                            <use href="icons.svg#icon__class"></use>
+                          </svg>
+  
+                          <p>22</p>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li class="search-result_item search-result-item__chapter">
+                    <div class="left">
+                      <img src="img/class_cover_1.jpg" alt="">
+                    </div>
+  
+                    <div class="right">
+                      <div class="top">
+                        <h4>Physics 1st Paper<h4>
+                      </div>
+  
+                      <div class="bottom">
+                        <div class="left">
+                          <p>Chapter 1: Thermodynamics</p>
+                        </div>
+                      </div>
+  
+                      <div class="more-bottom">
+                        <div class="total_notes">
+                          <svg>
+                            <use href="icons.svg#icon__pages"></use>
+                          </svg>
+  
+                          <p>32</p>
+                        </div>
+  
+                        <div class="total_classes">
+                          <svg>
+                            <use href="icons.svg#icon__class"></use>
+                          </svg>
+  
+                          <p>22</p>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Feed</a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Subjects</a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Saved</a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Sign up</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  
+    <section class="vh-100 login__cont">
+  <div class="container-fluid h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-9 col-lg-6 col-xl-5">
-        <header>
+        <header class="welcome-text">
           <h2>WELCOME TO</h2>
           <h1 class="header-h1">Shohopath!</h1></header>
         <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
@@ -43,7 +329,7 @@
           <!-- Email input -->
           <div class="form-outline mb-4">
             <input type="email" id="form3Example3" class="form-control form-control-lg"
-              placeholder="Enter a valid email address" />
+              placeholder="Enter your email address" />
             <label class="form-label" for="form3Example3"></label>
           </div>
 
@@ -67,7 +353,7 @@
 
           <div class="text text-lg-start mt-4 pt-2">
             <div class="col-md-12 mt-4">
-              <button type="submit" class="btn btn-outline-info btn-lg">Sign Up</button>
+              <button type="submit" class="btn btn-outline-info btn-lg">Sign In</button>
           </div>
             <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="registration.html"
                 class="link-register-btn">Register</a></p>
