Updated alignment login.html

--- a/login.html
+++ b/login.html
@@ -13,8 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css">
+<!-- Custom CSS -->
   <link rel="stylesheet" href="login.css">
 
 </head>
@@ -330,11 +329,10 @@
           <div class="form-outline mb-4">
             <input type="email" id="form3Example3" class="form-control form-control-lg"
               placeholder="Enter your email address" />
-            <label class="form-label" for="form3Example3"></label>
           </div>
 
           <!-- Password input -->
-          <div class="form-outline mb-3">
+          <div class="form-outline mb-2">
             <input type="password" id="form3Example4" class="form-control form-control-lg"
               placeholder="Enter password" />
             <label class="form-label" for="form3Example4"></label>
@@ -344,19 +342,18 @@
             <!-- Checkbox -->
             <div class="form-check mb-0">
               <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-              <label class="form-check-label" for="form2Example3">
                 Remember me
               </label>
             </div>
             <a href="#!" class="text-body">Forgot password?</a>
           </div>
 
-          <div class="text text-lg-start mt-4 pt-2">
+          <div class="text text-lg-start mt-4 ">
             <div class="col-md-12 mt-4">
               <button type="submit" class="btn btn-outline-info btn-lg">Sign In</button>
           </div>
-            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="registration.html"
-                class="link-register-btn">Register</a></p>
+            <p class="small fw-bold mt-2 pt-2 mb-0">Don't have an account? <a href="registration.html"
+                class="link-register-btn">Register Now</a></p>
           </div>
 
         </form>
