Subject page finished

--- a/Subjects.html
+++ b/Subjects.html
@@ -462,6 +462,8 @@
 
   <div class="subject__cont">
     <header>
+        <h2 class="header-text">Your Subjects</h2>
+
         <div class="top">
           <div class="left">
             <div>
@@ -514,11 +516,7 @@
     </header>
 
     <main>
-        <header>
-            <h2>Your Subjects</h2>
-        </header>
-
-        <main class="subjects">
+      <main class="subjects">
             <ul>
                 <li class="subject upload">
                     <header>
