--- a/profile.html
+++ b/profile.html
@@ -295,11 +295,6 @@
           <li class="nav-item">
             <a class="nav-link active" href="#">Saved</a>
           </li>
-          
-          <li class="nav-item-profile">
-            <a class="nav-link active" href="#"><img class="img-fluid rounded-circle"
-                src="img/profile_image.jpg" alt="Profile"></a>
-          </li>
         </ul>
       </div>
     </div>
@@ -464,7 +459,7 @@
     <div class="container-fluid">
       <div class="profile-header">
         <div class="row g-0">
-          <div class="col-md-4"><img class="profile rounded-circle" src="profile_image.jpg" alt="Profile"></div>
+          <div class="col-md-4"><img class="profile rounded-circle" src="img/profile_image.jpg" alt="Profile"></div>
           <div class="col-md-8">
             <p class="Name"><strong>Sakib UL Hasan</strong></p>
             <p class="College fs-4"><small>Adamjee Cantonment College</small></p>
