--- a/profile.html
+++ b/profile.html
@@ -295,6 +295,11 @@
           <li class="nav-item">
             <a class="nav-link active" href="#">Saved</a>
           </li>
+          
+          <li class="nav-item-profile">
+            <a class="nav-link active" href="#"><img class="img-fluid rounded-circle"
+                src="img/profile_image.jpg" alt="Profile"></a>
+          </li>
         </ul>
       </div>
     </div>
@@ -459,7 +464,7 @@
     <div class="container-fluid">
       <div class="profile-header">
         <div class="row g-0">
-          <div class="col-md-4"><img class="profile rounded-circle" src="img/profile_image.jpg" alt="Profile"></div>
+          <div class="col-md-4"><img class="profile rounded-circle" src="profile_image.jpg" alt="Profile"></div>
           <div class="col-md-8">
             <p class="Name"><strong>Sakib UL Hasan</strong></p>
             <p class="College fs-4"><small>Adamjee Cantonment College</small></p>
@@ -467,7 +472,7 @@
         </div>
       </div>
       <div class="row g-0">
-        <div class="col-md-3">
+        <div class="col-md-3 g-3">
           <!-- Sidebar Start -->
           <div class="sidebar">
             
