--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="profile2.css">
+  <link rel="stylesheet" href="profile.css">
 </head>
 <body>
 
