Profile page completed

--- a/Subjects.html
+++ b/Subjects.html
@@ -465,7 +465,7 @@
         <h2 class="header-text">Your Subjects</h2>
 
         <div class="top">
-          <div class="left">
+          <div class="left info-box">
             <div>
               <p>Total subjects</p> <p>12</p>
             </div>
