--- a/Homepage.html
+++ b/Homepage.html
@@ -307,7 +307,7 @@
     </div>
 
     <div class="search_mobile">
-      <div class="search_bar_mobile">
+      <div class="search_bar">
         <input class="search-input" type="text" placeholder="Search for a subject or a chapter">
         <svg class="search-icon" onclick="focusInput()" onmouseenter="focusInput()">
           <use href="icons.svg#icon__search"></use>
