--- a/Subjects.html
+++ b/Subjects.html
@@ -483,7 +483,7 @@
             </div>
           </div>
 
-          <div class="right">
+          <div class="right info-box">
             <div>
               <p>Total chapters</p> <p>12</p>
             </div>
