--- a/Homepage.html
+++ b/Homepage.html
@@ -306,7 +306,8 @@
         </ul>
       </div>
     </div>
-
+  </nav>
+  <section class="mobile-on-mobile">
     <div class="search_mobile">
       <div class="search_bar_mobile">
         <input class="search-input" type="text" placeholder="Search for a subject or a chapter">
@@ -473,7 +474,7 @@
       </div>
 
     </div>
-  </nav>
+  </section>
 
 
   <!-- Navbar End -->
