--- a/notes_classes.html
+++ b/notes_classes.html
@@ -15,10 +15,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
 
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="subjects.css">
-	<link rel="stylesheet" href="chapters.css">
-	<link rel="stylesheet" href="Notes_and_Classes.css">
+	<link rel="stylesheet" href="config.css">
+	<link rel="stylesheet" href="subjects_chapters.css">
+	<link rel="stylesheet" href="notes_classes.css">
 
 </head>
 
