--- a/registration.html
+++ b/registration.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="config.css">
   <link rel="stylesheet" href="registration.css">
 </head>
 
@@ -319,10 +319,7 @@
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
           <form>
             <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-              <p class="lead fs-1 fw-normal mb-0 me-3 sign-up_text">SIGN UP</p>
-            </div>
-            <div class="divider d-flex align-items-center my-4">
-              <p class="text fw-bold mx-3 mb-0"></p>
+              <p class="lead fs-1 fw-normal mb-0 me-3 sign-up_text">SIGN UP!</p>
             </div>
             <div class="row mb-3">
               <div class="col-md-6 form-outline">
@@ -395,6 +392,9 @@
 
               <div class="col-md-12 mt-4">
                 <button type="submit" class="btn btn-outline-info btn-lg">Sign Up</button>
+              
+                <p class="small fw-bold mt-2 pt-2 mb-0">Already have an account? <a href="registration.html"
+                  class="link-register-btn">Login</a></p>
               </div>
             </div>
           </form>
