--- a/subjects.html
+++ b/subjects.html
@@ -15,9 +15,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="subjects.css">
-  <link rel="stylesheet" href="chapters.css">
+  <link rel="stylesheet" href="config.css">
+  <link rel="stylesheet" href="subjects_chapters.css">
 
 </head>
 
@@ -470,22 +469,22 @@
 
   <div class="subject__cont">
     <header>
-      <h2 class="header-text">Physics 1st Paper</h2>
+      <h2 class="header-text">Your Subjects</h2>
 
       <div class="top">
         <div class="left info-box">
           <div>
-            <p>Total uploads</p>
+            <p>Total subjects</p>
             <p>12</p>
           </div>
 
           <div>
-            <p>Notes</p>
+            <p>Total notes</p>
             <p>122</p>
           </div>
 
           <div>
-            <p>Classes</p>
+            <p>Total classes</p>
             <p>142</p>
           </div>
 
@@ -541,7 +540,7 @@
 
             <footer>
               <div class="top">
-                <h4>Chapter 1</h4>
+                <h4>Physics 1st Paper</h4>
                 <p>Chapters: 10</p>
 
                 <div class="right info_bar">
@@ -564,19 +563,16 @@
               </div>
 
               <div class="bottom">
-                <div class="left">
-                  <svg>
-                    <use href="icons.svg#icon__check"></use>
-                  </svg>
-                </div>
-
-                <div class="right">
-                  <p>You have completed this chapter!</p>
+                <div class="left progress_cont">
+                  <p>Completed:</p>
+                  <div class="progress-bar">
+                    <div class="bar"></div>
+                  </div>
+                  <p>82%</p>
                 </div>
               </div>
             </footer>
           </li>
-
 
           <li class="subject upload">
             <header>
@@ -585,7 +581,7 @@
 
             <footer>
               <div class="top">
-                <h4>Chapter 1</h4>
+                <h4>Physics 1st Paper</h4>
                 <p>Chapters: 10</p>
 
                 <div class="right info_bar">
@@ -608,19 +604,16 @@
               </div>
 
               <div class="bottom">
-                <div class="left">
-                  <svg>
-                    <use href="icons.svg#icon__check"></use>
-                  </svg>
-                </div>
-
-                <div class="right">
-                  <p>You have completed this chapter!</p>
+                <div class="left progress_cont">
+                  <p>Completed:</p>
+                  <div class="progress-bar">
+                    <div class="bar"></div>
+                  </div>
+                  <p>82%</p>
                 </div>
               </div>
             </footer>
           </li>
-
 
           <li class="subject upload">
             <header>
@@ -629,7 +622,7 @@
 
             <footer>
               <div class="top">
-                <h4>Chapter 1</h4>
+                <h4>Physics 1st Paper</h4>
                 <p>Chapters: 10</p>
 
                 <div class="right info_bar">
@@ -652,19 +645,16 @@
               </div>
 
               <div class="bottom">
-                <div class="left">
-                  <svg>
-                    <use href="icons.svg#icon__check"></use>
-                  </svg>
-                </div>
-
-                <div class="right">
-                  <p>You have completed this chapter!</p>
+                <div class="left progress_cont">
+                  <p>Completed:</p>
+                  <div class="progress-bar">
+                    <div class="bar"></div>
+                  </div>
+                  <p>82%</p>
                 </div>
               </div>
             </footer>
           </li>
-
 
           <li class="subject upload">
             <header>
@@ -673,7 +663,7 @@
 
             <footer>
               <div class="top">
-                <h4>Chapter 1</h4>
+                <h4>Physics 1st Paper</h4>
                 <p>Chapters: 10</p>
 
                 <div class="right info_bar">
@@ -696,19 +686,16 @@
               </div>
 
               <div class="bottom">
-                <div class="left">
-                  <svg>
-                    <use href="icons.svg#icon__check"></use>
-                  </svg>
-                </div>
-
-                <div class="right">
-                  <p>You have completed this chapter!</p>
+                <div class="left progress_cont">
+                  <p>Completed:</p>
+                  <div class="progress-bar">
+                    <div class="bar"></div>
+                  </div>
+                  <p>82%</p>
                 </div>
               </div>
             </footer>
           </li>
-
 
           <li class="subject upload">
             <header>
@@ -717,7 +704,7 @@
 
             <footer>
               <div class="top">
-                <h4>Chapter 1</h4>
+                <h4>Physics 1st Paper</h4>
                 <p>Chapters: 10</p>
 
                 <div class="right info_bar">
@@ -740,19 +727,16 @@
               </div>
 
               <div class="bottom">
-                <div class="left">
-                  <svg>
-                    <use href="icons.svg#icon__check"></use>
-                  </svg>
-                </div>
-
-                <div class="right">
-                  <p>You have completed this chapter!</p>
+                <div class="left progress_cont">
+                  <p>Completed:</p>
+                  <div class="progress-bar">
+                    <div class="bar"></div>
+                  </div>
+                  <p>82%</p>
                 </div>
               </div>
             </footer>
           </li>
-
 
           <li class="subject upload">
             <header>
@@ -761,7 +745,7 @@
 
             <footer>
               <div class="top">
-                <h4>Chapter 1</h4>
+                <h4>Physics 1st Paper</h4>
                 <p>Chapters: 10</p>
 
                 <div class="right info_bar">
@@ -784,19 +768,16 @@
               </div>
 
               <div class="bottom">
-                <div class="left">
-                  <svg>
-                    <use href="icons.svg#icon__check"></use>
-                  </svg>
-                </div>
-
-                <div class="right">
-                  <p>You have completed this chapter!</p>
+                <div class="left progress_cont">
+                  <p>Completed:</p>
+                  <div class="progress-bar">
+                    <div class="bar"></div>
+                  </div>
+                  <p>82%</p>
                 </div>
               </div>
             </footer>
           </li>
-
 
           <li class="subject upload">
             <header>
@@ -805,7 +786,7 @@
 
             <footer>
               <div class="top">
-                <h4>Chapter 1</h4>
+                <h4>Physics 1st Paper</h4>
                 <p>Chapters: 10</p>
 
                 <div class="right info_bar">
@@ -828,14 +809,53 @@
               </div>
 
               <div class="bottom">
-                <div class="left">
-                  <svg>
-                    <use href="icons.svg#icon__check"></use>
-                  </svg>
+                <div class="left progress_cont">
+                  <p>Completed:</p>
+                  <div class="progress-bar">
+                    <div class="bar"></div>
+                  </div>
+                  <p>82%</p>
                 </div>
+              </div>
+            </footer>
+          </li>
 
-                <div class="right">
-                  <p>You have completed this chapter!</p>
+          <li class="subject upload">
+            <header>
+              <img src="img/note_cover_2.jpg" alt="">
+            </header>
+
+            <footer>
+              <div class="top">
+                <h4>Physics 1st Paper</h4>
+                <p>Chapters: 10</p>
+
+                <div class="right info_bar">
+                  <div class="total_notes">
+                    <svg class="info__icon">
+                      <use href="icons.svg#icon__pages"></use>
+                    </svg>
+
+                    <p>32</p>
+                  </div>
+
+                  <div class="total_classes">
+                    <svg class="info__icon">
+                      <use href="icons.svg#icon__class"></use>
+                    </svg>
+
+                    <p>22</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="bottom">
+                <div class="left progress_cont">
+                  <p>Completed:</p>
+                  <div class="progress-bar">
+                    <div class="bar"></div>
+                  </div>
+                  <p>82%</p>
                 </div>
               </div>
             </footer>
