--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <!-- Custom CSS -->
+  <link rel="stylesheet" href="config.css">
   <link rel="stylesheet" href="login.css">
 
 </head>
@@ -317,12 +318,7 @@
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form>
           <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-            <p class="lead fs-1 fw-normal mb-0 me-3">SIGN IN :</p>
-            
-          </div>
-
-          <div class="divider d-flex align-items-center my-4">
-            <p class="text fw-bold mx-3 mb-0"></p>
+            <p class="lead fs-1 fw-normal mb-0 me-3 sign-up_text">LOGIN!</p>
           </div>
 
           <!-- Email input -->
